# json-canon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
fixtures/: 01-basic.canon  01-basic.json  02-numbers.canon  02-numbers.json  03-python-dialect.canon  03-python-dialect.json  04-jsonc.canon  04-jsonc.json  05-bom-utf8.canon  05-bom-utf8.json  06-bom-utf16le.canon  06-bom-utf16le.json  07.canon  07.ndjson  08-json5.canon  08-json5.json5  09-jcs.canon  09-jcs.json  10-json5-ident.canon  10-json5-ident.json5  11-json-seq.canon  11-json-seq.jsonseq  12-cbor.canon  12-cbor.cbor  12-cbor.json  13-geojson.json  14-jtd.instance.json  14-jtd.schema.jtd  15-jdata.canon  15-jdata.json  16-cddl.instance.json  16-cddl.schema.cddl  17-schema.instance.json  17-schema.schema.json  18-msgpack.canon  18-msgpack.json  18-msgpack.msgpack
nim/: jsoncanon.nimble
nim/src/: cbor.nim  cddl.nim  json5_ident.nim  jsoncanon.nim  jsoncanon_cli.nim  jsonpatch.nim  jsonpointer.nim  jsonschema.nim  jtd.nim  msgpack.nim  (+4 more)
paper/: README.md  abstract.txt  main.bbl  main.tex  references.bib
python/: README.md  pyproject.toml
python/jsoncanon/: __init__.py  _format.py  _json5_ident.py  _regex.py  cbor.py  cddl.py  cli.py  ecma.py  jdata.py  jsonpatch.py  jsonpointer.py  jsonschema.py  jtd.py  lint.py  msgpack.py  numbers.py  pandas_accessor.py  parser.py  serializer.py
python/tests/: test_canon.py  test_pandas_accessor.py
tools/: check.sh  fuzz_force.py  fuzz_regex.py  fuzz_ryu.py  gen_id_tables.py  gen_ryu_tables.py  parity.sh  parity_jcs.py  reproduce.sh
(+5 files in other folders)
