[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jsoncanon"
version = "0.1.0"
description = "Canonical JSON normalizer — deterministic byte output across producers"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
jsoncanon = "jsoncanon.cli:main"

[project.optional-dependencies]
pandas = ["pandas"]
test = ["pytest"]
dev = ["pytest", "mypy", "pyright", "pandas"]

[tool.setuptools.packages.find]
include = ["jsoncanon*"]

[tool.mypy]
strict = true
files = ["jsoncanon"]

# pandas ships no type stubs by default; the optional accessor uses Any-typed
# pandas objects, so allow the import without erroring under --strict.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[tool.pyright]
# Resolve the optional pandas dependency from the project venv.
venvPath = ".."
venv = ".venv"
